# safeio

./: .gitignore  .travis.yml  ChangeLog  Makefile  README.md  package.yaml  safeio.cabal  stack.yaml
.github/workflows/: run-tests.yml
.travis/: travis_before_install.sh  travis_install.sh
Data/Conduit/: SafeWrite.hs
System/IO/: SafeWrite.hs
System/IO/SafeWrite/: Tests.hs
