name:               safeio
version:            0.0.1.0
synopsis:           Write output to disk atomically
author:             Luis Pedro Coelho
license:            MIT
license-file:       COPYING
cabal-version:      >= 1.10
build-type:         Simple

library
  default-language: Haskell2010
  exposed-modules: System.IO.SafeWrite
  ghc-options: -Wall
  build-depends:
    base,
    directory,
    filepath,
    unix

Test-Suite safeiotest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: System/IO/SafeWrite/Tests.hs
  other-modules: System.IO.SafeWrite
  ghc-options: -Wall
  hs-source-dirs: .
  build-depends:
    base,
    directory,
    filepath,
    unix,
    HUnit,
    test-framework,
    test-framework-hunit,
    test-framework-th
